# aiohttp_lamp

./: .gitignore  INSTUCTION.md  README.md  pyproject.toml  setup.cfg  test_after_building_commit.py  test_after_building_local.py  test_after_packaging.py  test_before_packaging.py
.github/workflows/: python-package.test_before_packaging.yml
aiohttp_lamp/: client.py  lamp.py
aiohttp_lamp/commands/: base.py  color.py  consts.py  off.py  on.py  utils.py
project_sample/: .env.sample
project_sample/requirements/: test_after_packaging.txt  test_before_packaging.txt  work_after_building_base.txt  work_after_building_commit.txt  work_after_building_local.txt  work_after_publishing.txt
project_sample/src/: main.py  server_example.py  settings.py
tests/: __init__.py  test_client.py  test_lamp.py
tests/commands/: __init__.py  test_base.py  test_color.py  test_off.py  test_on.py  test_utils.py
