[metadata]
name = aiohttp_lamp
version = 0.1
description = Packaged WebSocket client to manage a lamp (using aiohttp).
long_description = file: README.md
url = https://github.com/Volkova-Natalia/aiohttp_lamp
author = Volkova Natalia
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.7.4.post0
    pytest>=6.2.5
    pytest-aiohttp>=0.3.0
